# ABM-Swarm-Optimization

./: README.md  agents.py  plot.py
ABM-notebooks/: pyproject.toml  setup.md
ABM-notebooks/notebooks/1/1-mesa/: 1-mesa.ipynb
ABM-notebooks/notebooks/2-3/2-axelrod/: 2-axelrod-2.ipynb
ABM-notebooks/notebooks/2-3/3-discrete-choice/: 3-discrete-choice.ipynb
ABM-notebooks/notebooks/2-3/3-discrete-choice/mesa_discretechoice/: direction_choices.csv  generate_data.py
ABM-notebooks/notebooks/4/: 4-sensitivity-analysis.ipynb
ABM-notebooks/notebooks/4/wolf_sheep/: test_random_walk.py
outputs/sobol/data/: sobol_raw_runs.csv
outputs/sobol_fast/data/: sobol_raw_runs.csv
